Bug 1386848 - stylo: Get proper length value from calc nsCSSValue r=xidorn

We were getting the proper app units value for transform matrix offset before
Bug 1384656. But after that bug we started using GetCalcValue() method and
it wasn't converting length to app units and this was cousing to miscalculate
translate functions in transform property.

MozReview-Commit-ID: HHlrSg00252